chall comp withput refactor

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,5 +7,5 @@
   <% end %>
   </ul>
 <div>
-  <p><%= link_to "Add a new task", "new" %></p>
+  <p><%= link_to "Add a new task", "tasks/new" %></p>
 </div>
